--- a/Discussion/ev2WriteUp.tex
+++ b/Discussion/ev2WriteUp.tex
@@ -124,6 +124,10 @@
 \section{Overall Design}
 
 \section{Back End Design and Analysis}
+\subsection{New Features}
+Describe how we implemented each
+\subsection{Benefits of Our Previous Design}
+\subsection{Drawbacks of Our Previous Design}
 
 \section{Front End Design and Analysis}
 
