--- a/Discussion/ev2WriteUp.tex
+++ b/Discussion/ev2WriteUp.tex
@@ -115,25 +115,43 @@
 
 \vspace{0.2in}
 
+\abstract{This project is the second evolution of the soCal Calendar project for ECE 458: Engineering Software for Maintainability.  The ultimate goal is to create a calendar application usable by anyone and provides the functionality required to create and share calendars or specific events to other users in the system.  For the second evolution, the requirements were to add event invitation, request acceptance, and present-until-done (PUD) events.}
+
 \tableofcontents
 
 
 \pagebreak
 
-\
 
 \section{Overall Design}
+
+The overarching design principle we wanted to achieve was modularity. In doing so, we believed we would be able to work separately (with occasional meetings to work through minor problems with the API) and refactor without the worry of breaking another members code. The figure below shows a high level diagram of how we decided to design our calendar web application.
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=.5\textwidth]{DesignDiagram.png}
+\caption{Diagram of our Large Scale Design}
+\label{design}
+\end{figure}
+
+\noindent Essentially, our back end team provides an exhaustive RESTful API service to our front end. As we received the new requirements for evolution two, the benefits of our modular design came to light as we met to discuss both the refactorings from evolution one that needed to be done and the edits to each modules system design in order to account for the added calendar functionality--event requests and persistent until done events.\\
+
+\noindent At the beginning of evolution two, our group spent four days simply refactoring and making large design change decisions. The back-end did not undergo much broad change, but the front end implemented a new type of calendar (see Front End Section for further analysis on this). Our modular design has been engineered in such a way that any front end client service can use our backend service. Because of this, development on the backend did not have to stop and integration of the new front end was seamless.\\
+
+\noindent The following sections further discuss design choices and implications of those design choices for both our front end and back end teams. 
 
 \section{Back End Design and Analysis}
 \subsection{New Features}
 
 The back-end introduced sharing on an event granularity through event invitation, request objects, and PUDs.  Also, we introduced a powerful new tool called deepPopulate.\\~\\
+\noindent DeepPopulate is a mongoose plugin that allows us to do deep population of nested models.  During the development of evolution 1, we were unable to deep populate and instead resorted to levels of callbacks on callbacks in a ham fisted attempt to populate down more than 1 level of a mongoose model.  For example, when returning a Calendar to the front end, we would first query for a user, populate its calendars, and for each Calendar we would query for the events, owner, and rules within callbacks and add them to the JSON object to return.  We could continue deep populating this way, but the levels of callbacks made the code incredibly challenging.  DeepPopulate allowed us to populate multiple fields from a model at whatever depth we desired in 1 line.  This sped up production and gave us incredible flexibility in how we package information to send to the front end.\\~\\
+\noindent While designing requests and redesigning events, we realized that they are very much tied together.  When a new event is created, a matching request object is also created alongside it.  This request object holds all of the information about which users have been invited to edit the event and their statuses: pending, accepted, denied, rejected.  When a user is invited to an event, the \_id for the request is added to the user's 'eventRequest' field.  The requests in a user's ?eventRequest' field are all of the pending requests that the user must respond to.  Upon accepting a request, a copy of the original event is created and placed in the calendar of the accepting user's choosing.  This copy is a stand alone event with similar information to the original event.  That way, when an edit is made to the original event, the copy is not altered until the user accepts the edits.\\
 
-DeepPopulate is a mongoose plugin that allows us to do deep population of nested models.  During the development of evolution 1, we were unable to deep populate and instead resorted to levels of callbacks on callbacks in a ham fisted attempt to populate down more than 1 level of a mongoose model.  For example, when returning a Calendar to the front end, we would first query for a user, populate its calendars, and for each Calendar we would query for the events, owner, and rules within callbacks and add them to the JSON object to return.  We could continue deep populating this way, but the levels of callbacks made the code incredibly challenging.  DeepPopulate allowed us to populate multiple fields from a model at whatever depth we desired in 1 line.  This sped up production and gave us incredible flexibility in how we package information to send to the front end.\\~\\
+\noindent The ability to create an event that is persistent until done (PUD) was another major addition in functionality to the calendar. At first, we wanted to try and reuse our Event schema to handle the PUDs, but one of the requirements (requirement g) forced us to decouple them. Hence, we created a new model for the PUD completely. \\
 
-While designing requests and redesigning events, we realized that they are very much tied together.  When a new event is created, a matching request object is also created alongside it.  This request object holds all of the information about which users have been invited to edit the event and their statuses: pending, accepted, denied, rejected.  When a user is invited to an event, the \_id for the request is added to the user's 'eventRequest' field.  The requests in a user's ?eventRequest' field are all of the pending requests that the user must respond to.  Upon accepting a request, a copy of the original event is created and placed in the calendar of the accepting user's choosing.  This copy is a stand alone event with similar information to the original event.  That way, when an edit is made to the original event, the copy is not altered until the user accepts the edits.\\~\\
+\noindent Although we were not able to completely reuse the code from the Event, we were able to reuse the Alert type we created in the first evolution with some minor additions to the schema definition. This allowed us to call our Alert constructor when a PUD event was created and email handling would happen automatically without any changes (email handling happens in {\tt alertRoutes.js}. Apart from some refactorings to make the code cleaner, this file did not change much.\\
 
-PUD stuff
+\noindent PUDs can also be set to repeat at a certain interval (we elected to allow the user to select this repeat on the a day count granularity, 7 would be for weekly). The {\tt repeatInterval} property in the PUD schema held this information and is set upon creation. Upon completion, our server code checks to see if an interval has been set. If so, the {\tt date} property is updated accordingly and the PUD is perserved in the database. This PUD will not appear on the users To-Do list until this new date, because the GET request for the To-Do section filters out any date that does not precede the current time.
 
 \subsection{Benefits of Our Previous Design}
 
@@ -141,23 +159,23 @@ Our previous design worked well for what it was intended to do.  Everything was 
 
 \subsection{Drawbacks of Our Previous Design}
 
-Our previous design had event sharing on a calendar granularity.  For example, one event was fixed to one calendar, but the entire calendar could be shared with another user.  Unfortunately, the new evolution required us to be able to share and invite single individual events.  In order to fulfill this requirement, we had to redesign our event schema and how calendars store events.  It was not a painful fix, but it was definitely took some redesigning and rethinking of our calendar's functionality.\\~\\
+Our previous design had event sharing on a calendar granularity.  For example, one event was fixed to one calendar, but the entire calendar could be shared with another user.  Unfortunately, the new evolution required us to be able to share and invite single individual events.  In order to fulfill this requirement, we had to redesign our event schema and how calendars store events.  It was not a painful fix, but it was definitely took some redesigning and rethinking of our calendar's functionality.\\
 
-Our previous design also worked around our lack of understanding of deepPopulate and promises.  There were several areas with multiple levels of nested callbacks and re-routing in order to work around our problems.  However, in this evolution, we learned how to properly deepPopulate and to utilize promises.  These new developments helped clean up our code, decrease development time, and gave us incredible flexibility and control over our mongoose queries, how we package and populate data, and the overall flow of our code.
+\noindent Our previous design also worked around our lack of understanding of deepPopulate and promises.  There were several areas with multiple levels of nested callbacks and re-routing in order to work around our problems.  However, in this evolution, we learned how to properly deepPopulate and to utilize promises.  These new developments helped clean up our code, decrease development time, and gave us incredible flexibility and control over our mongoose queries, how we package and populate data, and the overall flow of our code.
 
 \section{Front End Design and Analysis}
 
-The web client required a number of additional functions in order to handle requests and PUD events. Thanks to the modularity of the previous design, most of these additional functions did not require many changes to existing code. This allowed more time to refactor existing code and provide many quality of life upgrades.\\~\\
+\noindent The web client required a number of additional functions in order to handle requests and PUD events. Thanks to the modularity of the previous design, most of these additional functions did not require many changes to existing code. This allowed more time to refactor existing code and provide many quality of life upgrades.\\
 
-PUD events were added in as an additional list retrieved from the server. We displayed them using an Angular repeating list in the sidebar by replacing the previous location for local calendar events. The sidebar was almost out of space for an additional section, and the current design will require a significant UI overhaul if we must add any more sections for the sidebar. In order to display PUD events inside of calendar events, we simply added a section for display in the event detail display that becomes populated via a GET when the event is selected. We could potentially use this method to get more data in the future, but the more data we need to retrieve from the server, the slower the detail modal will load.\\~\\
+\noindent PUD events were added in as an additional list retrieved from the server. We displayed them using an Angular repeating list in the sidebar by replacing the previous location for local calendar events. The sidebar was almost out of space for an additional section, and the current design will require a significant UI overhaul if we must add any more sections for the sidebar. In order to display PUD events inside of calendar events, we simply added a section for display in the event detail display that becomes populated via a GET when the event is selected. We could potentially use this method to get more data in the future, but the more data we need to retrieve from the server, the slower the detail modal will load.\\
 
-Requests were added as a paired object with events. Each event creates an empty request during creation which can be populated by a new form. These requests are shown in a sidebar region that shows sent requests and received requests as well as any updates to sent requests. Requests do not update immediately on other clients and require a refresh to update when sent out.\\~\\
+\noindent Requests were added as a paired object with events. Each event creates an empty request during creation which can be populated by a new form. These requests are shown in a sidebar region that shows sent requests and received requests as well as any updates to sent requests. Requests do not update immediately on other clients and require a refresh to update when sent out.\\
 
-The rest of the code changes involved refactoring large functions, organizing the code more logically, implementing modals for UI experience, providing more auto-filled inputs, and caching data locally. The lingering problems in the design after these changes are the overuse of \$rootScope (a global scope for Angular) and the increasing size of our modal controller. The first problem is due in part to the scoping of Angular. If we wish to pass a value from one scope to another, it is impossible without passing it through the root scope. However, the root scope does not actually have knowledge of any of its child scopes, so the data passed must be stored in a global scope in order to transfer. The other problem of the scope of the modal controller can be fixed by decomposing the controller since the constituent parts are very loosely connected.\\~\\
+\noindent The rest of the code changes involved refactoring large functions, organizing the code more logically, implementing modals for UI experience, providing more auto-filled inputs, and caching data locally. The lingering problems in the design after these changes are the overuse of \$rootScope (a global scope for Angular) and the increasing size of our modal controller. The first problem is due in part to the scoping of Angular. If we wish to pass a value from one scope to another, it is impossible without passing it through the root scope. However, the root scope does not actually have knowledge of any of its child scopes, so the data passed must be stored in a global scope in order to transfer. The other problem of the scope of the modal controller can be fixed by decomposing the controller since the constituent parts are very loosely connected.\\
 
-The choice of caching and updating the data locally in conjunction with database updates has come with some benefits and some detriments. For user experience and future use, keeping and updating the data locally drastically reduces the amount of GET requests sent and parsed to maintain data consistency. However, this comes at the cost of increasing the code considerably for the client. Instead of requesting and re-displaying all of the data, the data on local copies must be manually updated to ensure that the user sees values consistent with the database. This will add to development time in the future.\\~\\
+\noindent The choice of caching and updating the data locally in conjunction with database updates has come with some benefits and some detriments. For user experience and future use, keeping and updating the data locally drastically reduces the amount of GET requests sent and parsed to maintain data consistency. However, this comes at the cost of increasing the code considerably for the client. Instead of requesting and re-displaying all of the data, the data on local copies must be manually updated to ensure that the user sees values consistent with the database. This will add to development time in the future.\\~\\
 
-Finally, the Jade template for our single-page site has been growing considerably. Almost all of the relevant HTML for the calendar page is within a single file. If possible, the created modals may need to be moved into their own HTML files, and the sidebars should be converted into UI routes for Angular to better organize the HTML. As it is now, future development will become harder the more we are required to sift through the file for details.\\~\\
+\noindent Finally, the Jade template for our single-page site has been growing considerably. Almost all of the relevant HTML for the calendar page is within a single file. If possible, the created modals may need to be moved into their own HTML files, and the sidebars should be converted into UI routes for Angular to better organize the HTML. As it is now, future development will become harder the more we are required to sift through the file for details.\\
 
 \section{Individual Portion}
 \subsection*{Parker}
@@ -219,7 +237,7 @@ Finally, the Jade template for our single-page site has been growing considerabl
 \end{enumerate}
 \item  {\bf Analyzing and Interpreting Data}
 \begin{enumerate} [$\cdot$]
-\item answer
+\item One thing that was causing problems was the object that the Calendar data was returned to us on the front-end versus the object that we used to pass into the Angular Calendar we were using. These are slightly different since the Angular Calendar requires some extra fields so we made a wrapper around the back-end Calendar object. Because of this, when we were redesigning the display for a section, we mixed up the two objects which caused the calendar application to not render correctly since it was missing data. This was solved by looking through the database objects for the calendars and comparing that to the log of the objects before and after refreshing the page. We soon found that we were setting the wrong object on the front-end for the Angular Calendar and a small change fixed the problem.
 \end{enumerate}
 \item {\bf Designing System Components}
 \begin{enumerate} [$\cdot$]
